# ucd-data-rs

./: Cargo.toml  README.md  build.rs  data.bz3
src/: lib.rs
